--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-<html></html>
+<!DOCTYPE html>
+
+<html>
+
+	<head>
+		<link rel="stylesheet" href="css/main.css">
+		<title> El Royale Casino </title>
+		<div class = navigation>
+		<ul>
+            <li><a href = aboutUs.html>About Us</a></li>
+            <li><a href = blackjack.html>Online Blackjack Room</a></li>
+            <li><a href = contactUs.html>Contact Us</a></li>
+		</ul>
+		</div>
+	</head>
+
+	<body>
+		<div class = introduction>
+			<h1>Welcome the El Royale Casino Homepage</h1>
+			<p>We are a family own business in the United States since 1968. Come and see our exquiste ballroom with
+                <br> games like poker, roulette, and blackjack 
+                
+                <br><br>
+
+                As of December 21st 2019, we have no implemented a new online casino game to those that are unable to come and visit us.
+                
+                <br><br>
+
+                Please click the link to the online Blackjack Room if you wish to try your hand.
+            </p>
+		</div>
+		<br>
+		
+		<address>
+			<a id = 'contactInfo'>
+				<h1>Contact Information</h1>
+				<p><a href = ></a></p>
+			</a>
+		</address>
+
+		<div class = hours>
+			<h1>Casino Hours</h1>
+				<table style="width:50%">
+					<tr>
+						<th>Monday</th>
+						<th>Tuesday</th>
+						<th>Wednesday</th>
+						<th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                        <th>Sunday</th>
+					</tr>
+					<tr>
+						<td> 12:00pm - 2:00am</td>
+						<td> 12:00pm - 3:00am</td>
+                        <td> 12:00pm - 3:00am</td>
+                        <td> 12:00pm - 12:00am</td>
+                        <td> 12:00pm - 4:00am</td>
+                        <td> 12:00pm - 5:00am</td>
+                        <td> 12:00pm - 12:00am</td>
+					</tr>
+				</table>
+		</div>
+		
+		
+	</body>
+
+	<footer>
+		<p>&copy; Copyright 2020 Gomez and Kimsey</p>
+        <p><a href="dogomez@usca.edu">dogomez@usca.edu</a></p>
+        <p><a href="amkimsey@usca.edu">amkimsey@usca.edu</a></p>
+	  </footer>
+
+</html>
