--- a/bj.html
+++ b/bj.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     </head>
     <body>
+        <a href = "index.html" style = "display: block; margin-bottom: 8px; font-family: 'Varela Round', sans-serif;">Temporary home page button</a>
         <div id = "plrCardArea"></div>
         <div id = "cpuCardArea"></div>
     </body>
