Added basic gameplay

--- a/bj.html
+++ b/bj.html
@@ -9,8 +9,11 @@
     </head>
     <body>
         <a href = "index.html" style = "display: block; margin-bottom: 8px; font-family: 'Varela Round', sans-serif;">Temporary home page button</a>
-        <div id = "plrCardArea"></div>
         <div id = "cpuCardArea"></div>
+        <div id = "plrCardArea"></div>
+        <button type = "button" id = "hit">Hit</button>
+        <button type = "button" id = "stand">Stand</button>
+        <h1 id = "winner" style = "font-family: 'Varela Round', sans-serif;"></h1>
     </body>
     <script src = "js/bj.js"></script>
 </html>
