--- a/gamePage.html
+++ b/gamePage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blackjack Room</title>
+        <title>Game Room</title>
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-        <link rel = "stylesheet" href = "css/bj.css">
+        <link rel = "stylesheet" href = "css/gamePage.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     </head>
@@ -15,5 +15,5 @@
         <button type = "button" id = "stand">Stand</button>
         <h1 id = "winner" style = "font-family: 'Varela Round', sans-serif;"></h1>
     </body>
-    <script src = "js/bj.js"></script>
+    <script src = "js/game.js"></script>
 </html>
