--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div class = navigation>
 		<ul>
             <li><a href = aboutUs.html>About Us</a></li>
-            <li><a href = bj.html>Blackjack Room</a></li>
+            <li><a href = gamePage.html>Game Room</a></li>
             <li><a href = contactUs.html>Contact Us</a></li>
 		</ul>
 		</div>
