--- a/gamePage.html
+++ b/gamePage.html
@@ -9,11 +9,18 @@
     </head>
     <body>
         <a href = "index.html" style = "display: block; margin-bottom: 8px; font-family: 'Varela Round', sans-serif;">Temporary home page button</a>
-        <div id = "cpuCardArea"></div>
-        <div id = "plrCardArea"></div>
-        <button type = "button" id = "hit">Hit</button>
-        <button type = "button" id = "stand">Stand</button>
-        <h1 id = "winner" style = "font-family: 'Varela Round', sans-serif;"></h1>
+        <div id = "blackjack">
+            <div id = "cpuCardArea"></div>
+            <div id = "plrCardArea"></div>
+            <button type = "button" id = "hit">Hit</button>
+            <button type = "button" id = "stand">Stand</button>
+            <h1 id = "winner" style = "font-family: 'Varela Round', sans-serif;"></h1>
+        </div>
+        <div id = "slotMachine">
+            <div id = "slotReel1" value></div>
+            <div id = "slotReel2" value></div>
+            <div id = "slotReel3" value></div>
+        </div>
     </body>
     <script src = "js/game.js"></script>
 </html>
