nav bar, edited aboutUs, started contact form

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title> El Royale Casino </title>
 		<div class = navigation>
 		<ul>
+            <li><a href = index.html>Home Page</a></li>
             <li><a href = aboutUs.html>About Us</a></li>
             <li><a href = gamePage.html>Game Room</a></li>
             <li><a href = contactUs.html>Contact Us</a></li>
