added beginning css, still editing

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,14 +3,13 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main.css?version=51">
 		<title> El Royale Casino: About Us </title>
 		<div class = navigation>
 		<ul>
 			<li><a href = index.html>Home Page</a></li>
             <li><a href = aboutUs.html>About Us</a></li>
             <li><a href = gamePage.html>Game Room</a></li>
-            <li><a href = contactUs.html>Contact Us</a></li>
 		</ul>
 		</div>
 	</head>
@@ -34,6 +33,14 @@
             </p>
 		</div>
 		<br>
+
+
+		<address>
+			<a id = 'contactInfo'>
+				<h1>Contact Information</h1>
+				<p><a href = ></a></p>
+			</a>
+		</address>
 		
 		
 	</body>
