--- a/index.html
+++ b/index.html
@@ -1,75 +1,72 @@
 <!DOCTYPE html>
-
 <html>
 
-	<head>
-		<link rel="stylesheet" href="css/main.css">
-		<title> El Royale Casino </title>
-		<div class = navigation>
+<head>
+	<link rel="stylesheet" href="css/main.css?version=51" />
+	<title>El Royale Casino</title>
+	<div class="navigation">
 		<ul>
-            <li><a href = index.html>Home Page</a></li>
-            <li><a href = aboutUs.html>About Us</a></li>
-            <li><a href = gamePage.html>Game Room</a></li>
-            <li><a href = contactUs.html>Contact Us</a></li>
+			<li><a href="index.html">Home Page</a></li>
+			<li><a href="aboutUs.html">About Us</a></li>
+			<li><a href="gamePage.html">Game Room</a></li>
 		</ul>
-		</div>
-	</head>
+	</div>
+</head>
 
-	<body>
-		<div class = introduction>
+<body>
+	<div id="wrapper">
+		<div class="introduction">
 			<h1>Welcome the El Royale Casino Homepage</h1>
-			<p>We are a family own business in the United States since 1968. Come and see our exquiste ballroom with
-                <br> games like poker, roulette, and blackjack 
-                
-                <br><br>
+			<p>
+				We are a family own business in the United States since 1968. Come and
+				see our exquiste ballroom with <br />
+          games like poker, roulette, and blackjack
 
-                As of December 21st 2019, we have no implemented a new online casino game to those that are unable to come and visit us.
-                
-                <br><br>
+				<br /><br />
 
-                Please click the link to the online Blackjack Room if you wish to try your hand.
-            </p>
+          As of December 21st 2019, we have no implemented a new online casino
+          game to those that are unable to come and visit us.
+
+				<br /><br />
+
+          Please click the link to the online Blackjack Room if you wish to try
+          your hand.
+        </p>
 		</div>
-		<br>
-		
-		<address>
-			<a id = 'contactInfo'>
-				<h1>Contact Information</h1>
-				<p><a href = ></a></p>
-			</a>
-		</address>
 
-		<div class = hours>
+		<img alt="none" src = "img/best-casino-games.jpg">
+
+		<div class="hours">
 			<h1>Casino Hours</h1>
-				<table style="width:50%">
-					<tr>
-						<th>Monday</th>
-						<th>Tuesday</th>
-						<th>Wednesday</th>
-						<th>Thursday</th>
-                        <th>Friday</th>
-                        <th>Saturday</th>
-                        <th>Sunday</th>
-					</tr>
-					<tr>
-						<td> 12:00pm - 2:00am</td>
-						<td> 12:00pm - 3:00am</td>
-                        <td> 12:00pm - 3:00am</td>
-                        <td> 12:00pm - 12:00am</td>
-                        <td> 12:00pm - 4:00am</td>
-                        <td> 12:00pm - 5:00am</td>
-                        <td> 12:00pm - 12:00am</td>
-					</tr>
-				</table>
+			<table style="width:100%">
+				<tr>
+					<th>Monday</th>
+					<th>Tuesday</th>
+					<th>Wednesday</th>
+					<th>Thursday</th>
+					<th>Friday</th>
+					<th>Saturday</th>
+					<th>Sunday</th>
+				</tr>
+				<tr>
+					<td>12:00pm - 2:00am</td>
+					<td>12:00pm - 3:00am</td>
+					<td>12:00pm - 3:00am</td>
+					<td>12:00pm - 12:00am</td>
+					<td>12:00pm - 4:00am</td>
+					<td>12:00pm - 5:00am</td>
+					<td>12:00pm - 12:00am</td>
+				</tr>
+			</table>
 		</div>
-		
-		
-	</body>
 
-	<footer>
-		<p>&copy; Copyright 2020 Gomez and Kimsey</p>
-        <p><a href="dogomez@usca.edu">dogomez@usca.edu</a></p>
-        <p><a href="amkimsey@usca.edu">amkimsey@usca.edu</a></p>
-	  </footer>
+	</div>
+</body>
+
+<footer>
+	<p>&copy; Copyright 2020 Gomez and Kimsey</p>
+	<p><a href="dogomez@usca.edu">dogomez@usca.edu</a></p>
+	<p><a href="amkimsey@usca.edu">amkimsey@usca.edu</a></p>
+</footer>
 
 </html>
