mistake with img location fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
 		</div>
 
-		<img alt="none" src = "img/best-casino-games.jpg">
+		<img alt="none" src = "doc/best-casino-games.jpg">
 
 		<div class="hours">
 			<h1>Casino Hours</h1>
