--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         </p>
 		</div>
 
-		<img alt="none" src = "doc/best-casino-games.jpg">
+		<img alt="none" src = "doc/best-casinos-games.jpg" width="500" height="300">
 
 		<div class="hours">
 			<h1>Casino Hours</h1>
-			<table style="width:100%">
+			<table style="width:100%" border = "1" cellspacing = "0">
 				<tr>
 					<th>Monday</th>
 					<th>Tuesday</th>
