finished css for index and about us page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,18 +3,19 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="css/main.css?version=51">
-		<title> El Royale Casino: About Us </title>
-		<div class = navigation>
-		<ul>
-			<li><a href = index.html>Home Page</a></li>
-            <li><a href = aboutUs.html>About Us</a></li>
-            <li><a href = gamePage.html>Game Room</a></li>
-		</ul>
+		<link rel="stylesheet" href="css/main.css?version=51" />
+		<title>El Royale Casino</title>
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home Page</a></li>
+				<li><a href="aboutUs.html">About Us</a></li>
+				<li><a href="gamePage.html">Game Room</a></li>
+			</ul>
 		</div>
 	</head>
 
 	<body>
+		<div id="wrapper">
 		<div class = aboutUs>
 			<h1>Our History</h1>
 			<p>
@@ -34,15 +35,21 @@
 		</div>
 		<br>
 
+		<img alt="none" src = "doc/fam.jpg" width="500" height="300">
+
 
 		<address>
 			<a id = 'contactInfo'>
 				<h1>Contact Information</h1>
-				<p><a href = ></a></p>
+				<p><a href = customer_service@elroyale.com>customer_service@elroyale.com</a></p>
+				<p>(800) 555-555</p>
+				<p>5940 S Rainbow Blvd.</p>
+				<p>Las Vegas, Nevada. </p>
+				<p>P.O. Box 4400 </p>
 			</a>
 		</address>
 		
-		
+	</div>
 	</body>
 
 	<footer>
