--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
 		</div>
 
-		<img alt="none" src = "doc/best-casinos-games.jpg">
+		<img alt="none" src = "doc/best-casinos-games.jpg" width="500" height="300">
 
 		<div class="hours">
 			<h1>Casino Hours</h1>
